<resources>

    <string name="app_name">KCOU 88.1 FM</string>
    <string name="button_play">Play Or Pause Music</string>
    <string name="connection_warning">No Internet Connection</string>

    <string name="track_name"> </string>
    <string name="artist_name"> </string>
    <string name="album_name"> </string>

    <string name="play">Play Music</string>
    <string name="buffering">Buffering</string>
    <string name="pause">Pause Music</string>

    <string name="art1">Album Art 1</string>
    <string name="art2">Album Art 2</string>
    <string name="art3">Album Art 3</string>
    <string name="art4">Album Art 4</string>
    <string name="art5">Album Art 5</string>
    <string name="art6">Album Art 6</string>

    <string name="recent_tracks">RECENT TRACKS</string>


</resources>
