<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fm.kcou.kcou881fm.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/connectionWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:text="@string/connection_warning"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/streamBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/streamBar"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/albumArt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="12dp"
            app:layout_constraintBottom_toTopOf="@+id/sreamBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/no_cover" />

        <LinearLayout
            android:id="@+id/streamMetaData"
            android:layout_width="270dp"
            android:layout_height="match_parent"

            android:clipChildren="false"
            android:clipToPadding="true"
            android:orientation="vertical"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:fadingEdge="horizontal"
                android:padding="0dp"
                android:text="@string/track_name"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold"

                android:ellipsize="marquee"
                android:gravity="start"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1" />

            <TextView
                android:id="@+id/artistTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/artist_name"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"

                android:focusable="true"

                android:ellipsize="marquee"
                android:gravity="start"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1" />


            <TextView
                android:id="@+id/albumTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/album_name"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="italic"

                android:ellipsize="marquee"
                android:gravity="start"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1" />


        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="false"
            android:background="@drawable/ic_radio_white_24px"
            android:contentDescription="@string/button_play"
            android:onClick="playPauseStream"
            android:padding="6dp"
            android:scaleType="fitCenter"
            android:scaleX=".8"
            android:scaleY=".8" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>

